[package]
name = "pratt"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.21"
rowan = "0.10.0"
num-traits = "0.2.12"
num-derive = "0.3.2"

[dev-dependencies]
tracing-subscriber = "0.2.12"
